@@ -1,3 +1,6 @@
+DATE: 13-09-2005 23:00
+[dimeglio] Use standard mysql module functions to create db
+
 DATE: 08-07-2005 15:20
 [dimeglio] Increased major version because of interface changes in the config scripts
 
